[tool.poetry]
name = "social-data"
version = "0.1.0"
description = ""
authors = ["dahliasan"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.4.4"
requests = "^2.28.1"
snscrape = "^0.4.3.20220106"
matplotlib = "^3.5.3"
tensorflow = "^2.10.0"
numpy = "^1.23.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.15.2"
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
