[tool.poetry]
name = "social-data"
version = "0.1.0"
description = ""
authors = ["dahliasan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.13"
pandas = "^1.4.4"
requests = "^2.28.1"
snscrape = "^0.4.3.20220106"
matplotlib = "^3.5.3"
tensorflow = "^2.10.0"
numpy = "^1.23.2"
transformers = "^4.21.3"
scipy = "^1.9.1"
torch = "^1.12.1"
torchvision = "^0.13.1"
torchaudio = "^0.12.1"
llvmlite = "^0.39.1"
top2vec = "^1.0.27"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.15.2"
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
